# matrix-viewer

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Makefile  config.hh.in  matrix-viewer.desktop  matrix.rc  readme.md
cmake/: matrix-viewer-config.cmake
icons/matrix-viewer/: matrix.qrc
icons/tango/: tango.qrc
lang/: matrix-viewer_fr.ts
manpages/: matrix-viewer.1.fr.txt  matrix-viewer.1.txt
misc/: matrix-viewer-gdb.py  style.sh
profiles/: cameras.xml  dataBand.xml  dataRelocalization.xml  lines.xml  measures.xml  planes.xml  projectors.xml  tool.xml
src/: benchmark-dialog.cc  benchmark-dialog.hh  benchmark-result.cc  benchmark-result.hh  benchmark-task.cc  benchmark-task.hh  benchmark-thread.cc  benchmark-thread.hh  common-widgets.cc  common-widgets.hh  compare-dialog.cc  compare-dialog.hh  delegate.cc  delegate.hh  double-spinbox.cc  double-spinbox.hh  edf.cc  edf.hh  elapsed-timer.hh  empty-icon-provider.cc  empty-icon-provider.hh  file-chooser.cc  file-chooser.hh  histogram-dialog.cc  histogram-dialog.hh  histogram-widget.cc  histogram-widget.hh  histogram.cc  histogram.hh  image-view.cc  image-view.hh  logger.hh  main-window.cc  main-window.hh  main.cc  matrix-converter.cc  matrix-converter.hh  matrix-model-benchmark.cc  matrix-model.cc  matrix-model.hh  (+29 more)
